fixed white space and added input form/submit button

--- a/products.css
+++ b/products.css
@@ -23,8 +23,6 @@ h3 {
     height: 50px;
 }
 
-
-
 li {
     margin: 10px;
     border:1px solid #000;
@@ -34,17 +32,7 @@ li {
     margin-top: 3px;
     margin-left: 5px;
     margin-right: 5px;
-    /* display: flex;
-    flex-direction: column; */
 }
-
-
-/* li button {
-    border: 3px solid red;
-    justify-content: center;
-    align-content: center;
-    width: 50px;
-} */
 
 li select {
     width: 40px;
